# AdventOfCode

./: .gitignore
2022/AoC2022/: AoC2022.sln
2022/AoC2022/Day1/: Day1.cpp  Day1.vcxproj
2022/AoC2022/Day2/: Day2.cpp  Day2.vcxproj  Day2.vcxproj.filters
2023/AoC2023/: AoC2023.sln
2023/AoC2023/Day1/: Day1.cpp  Day1.vcxproj  Day1.vcxproj.filters
2023/AoC2023/Day10/: Day10.cpp  Day10.vcxproj  Day10.vcxproj.filters
2023/AoC2023/Day11/: Day11.cpp  Day11.vcxproj  Day11.vcxproj.filters
2023/AoC2023/Day2/: Day2.cpp  Day2.vcxproj
2023/AoC2023/Day3/: Day3.cpp  Day3.vcxproj  Day3.vcxproj.filters
2023/AoC2023/Day4/: Day4.cpp  Day4.vcxproj  Day4.vcxproj.filters
2023/AoC2023/Day5/: Day5.cpp  Day5.vcxproj  Day5.vcxproj.filters
2023/AoC2023/Day6/: Day6.cpp  Day6.vcxproj  Day6.vcxproj.filters
2023/AoC2023/Day7/: Day7.cpp  Day7.vcxproj  Day7.vcxproj.filters
2023/AoC2023/Day8/: Day8.cpp  Day8.vcxproj  Day8.vcxproj.filters
2023/AoC2023/Day9/: Day9.cpp  Day9.vcxproj  Day9.vcxproj.filters
AoC2024/: CMakeLists.txt
AoC2024/Day1/: CMakeLists.txt  Day1.cpp  Day1.h  input.txt  main.cpp  part1.cpp  part2.cpp
AoC2024/Day10/: CMakeLists.txt  common.cpp  common.h  part1.cpp  part2.cpp
AoC2024/Day11/: CMakeLists.txt  common.cpp  common.h  part1.cpp  part2.cpp
AoC2024/Day12/: CMakeLists.txt  common.cpp  common.h  part1.cpp  part2.cpp
AoC2024/Day13/: CMakeLists.txt  common.cpp  common.h  part1.cpp  part2.cpp
AoC2024/Day14/: CMakeLists.txt  common.cpp  common.h  part1.cpp  part2.cpp
AoC2024/Day2/: CMakeLists.txt  common.cpp  common.h  main.cpp  part1.cpp  part2.cpp
AoC2024/Day3/: CMakeLists.txt  common.cpp  common.h  main.cpp  part1.cpp  part2.cpp
AoC2024/Day4/: CMakeLists.txt  common.cpp  common.h  main.cpp  part1.cpp  part2.cpp
AoC2024/Day5/: CMakeLists.txt  common.cpp  common.h  part1.cpp  part2.cpp
AoC2024/Day6/: CMakeLists.txt  common.cpp  common.h  main.cpp  part1.cpp  part2.cpp
AoC2024/Day7/: CMakeLists.txt  common.cpp  common.h  part1.cpp  part2.cpp
AoC2024/Day8/: CMakeLists.txt  common.cpp  common.h  part1.cpp  part2.cpp
AoC2024/Day9/: CMakeLists.txt  part1.cpp  part2.cpp
AoC2024/shared/: CMakeLists.txt  inputtaker.cpp  inputtaker.h  matrix.h  utils.cpp  utils.h
AoC2024/template/: CMakeLists.txt  common.h  main.cpp  part1.cpp  part2.cpp
